[package]
name = "prime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "This repository contains a prime number generated between 2 and n limit using the Sieve of Eratosthenes algorithm implemented in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
